[package]
name = "julia"
version = "0.1.0"
authors = ["Cassie Jones <code@witchoflight.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixel-canvas = { path = "../pixel-canvas" }
packed_simd = "0.3"
rayon = "1.1"
rand = "0.7"
rand_distr = "0.2"
